# VOIP

./: .gitignore  CMakeLists.txt  README.md
demo/: socket_demo.cpp  tonegen.cpp
src/: CMakeLists.txt  audiodecoder.cpp  audiodecoder.h  audioencoder.cpp  audioencoder.h  main.cpp  receiver.cpp  receiver.h  rtp_depacker.cpp  rtp_depacker.h  rtp_packer.cpp  rtp_packer.h  sender.cpp  sender.h  simplejb.cpp  simplejb.h  voip_application.cpp  voip_application.h  voip_comm.cpp  voip_comm.h
util/include/: audiobuffer.h  socket.h  soundcard.h
util/src/: audiobuffer.cpp  soundcard.cpp
util/src/posix/: socket_posix.cpp
util/src/win/: socket_win.cpp
